# Archive-Enterprise-Analytics

./: .env.example  .gitignore  AGENTS.md  Makefile  PRODUCTION_READINESS.md  PROJECT_WALKTHROUGH.md  README.md  app.py  constraints-dev.txt  constraints.txt  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
data/models/: model_metrics.json  order_risk_scores.parquet  will_be_delayed_logistic_regression.joblib  will_generate_complaint_hist_gradient_boosting.joblib  will_generate_credit_memo_logistic_regression.joblib
data/processed/: build_manifest.json  data_quality_report.json  dim_customer.parquet  fact_customer_daily.parquet  fact_document.parquet  fact_email.parquet  fact_event_timeline.parquet  fact_order.parquet  fact_order_risk_features.parquet  retrieval_corpus.parquet
docs/: ARCHITECTURE.md  PLAIN_ENGLISH_GUIDE.md  SOCIAL_CONTENT_PACK.md  implementation_blueprint.json
pages/: 1_Executive_Overview.py  2_Customer_360.py  3_Order_Timeline.py  4_Risk_Scoring.py  5_Assistant.py  6_Data_Quality.py
powerbi/: README.md  theme.json
scripts/: build_data.py  seed_demo.py  train_models.py
src/archive_analytics/: __init__.py  __main__.py  _util.py  constants.py  dashboard.py  data.py  ingestion.py  modeling.py  quality.py  retrieval.py  settings.py  transforms.py
tests/: test_pipeline.py
